--- a/KnightProj/pom.xml
+++ b/KnightProj/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.vavr</groupId>
+			<artifactId>vavr</artifactId>
+			<version>0.10.3</version>
+		</dependency>
 
 	</dependencies>
 	<build>
